@@ -201,6 +201,150 @@ static int redir_urldecode(bstring src, bstring dst) {
   return 0;
 }
 
+
+static int bstring_buildurl(bstring str, struct redir_conn_t *conn,
+			    struct redir_t *redir, char *redir_url, char *resp,
+			    long int timeleft, char* hexchal, char* uid, 
+			    char* userurl, char* reply, char* redirurl,
+			    uint8_t *hismac, struct in_addr *hisip) {
+  bstring bt = bfromcstr("");
+  bstring bt2 = bfromcstr("");
+
+  bassignformat(str, "%s%cres=%s&uamip=%s&uamport=%d", 
+		redir_url, strchr(redir_url, '?') ? '&' : '?',
+		resp, inet_ntoa(redir->addr), redir->port);
+
+  if (hexchal) {
+    bassignformat(bt, "&challenge=%s", hexchal);
+    bconcat(str, bt);
+    bassigncstr(bt,"");
+  }
+  
+  if (conn->type == REDIR_STATUS) {
+    int starttime = conn->s_state.start_time;
+    if (starttime) {
+      int sessiontime;
+      time_t timenow = time(0);
+
+      sessiontime = timenow - starttime;
+
+      bassignformat(bt, "&starttime=%ld", starttime);
+      bconcat(str, bt);
+      bassignformat(bt, "&sessiontime=%ld", sessiontime);
+      bconcat(str, bt);
+    }
+
+    if (conn->s_params.sessiontimeout) {
+      bassignformat(bt, "&sessiontimeout=%ld", conn->s_params.sessiontimeout);
+      bconcat(str, bt);
+    }
+
+    if (conn->s_params.sessionterminatetime) {
+      bassignformat(bt, "&stoptime=%ld", conn->s_params.sessionterminatetime);
+      bconcat(str, bt);
+    }
+  }
+ 
+  if (uid) {
+    bcatcstr(str, "&uid=");
+    bassigncstr(bt, uid);
+    redir_urlencode(bt, bt2);
+    bconcat(str, bt2);
+  }
+
+  if (timeleft) {
+    bassignformat(bt, "&timeleft=%ld", timeleft);
+    bconcat(str, bt);
+  }
+  
+  if (hismac) {
+    bcatcstr(str, "&mac=");
+    bassignformat(bt, "%.2X-%.2X-%.2X-%.2X-%.2X-%.2X",
+		  hismac[0], hismac[1], 
+		  hismac[2], hismac[3],
+		  hismac[4], hismac[5]);
+    redir_urlencode(bt, bt2);
+    bconcat(str, bt2);
+  }
+
+  if (hisip) {
+    bassignformat(bt, "&ip=%s", inet_ntoa(*hisip));
+    bconcat(str, bt);
+  }
+
+  if (reply) {
+    bcatcstr(str, "&reply=");
+    bassigncstr(bt, reply);
+    redir_urlencode(bt, bt2);
+    bconcat(str, bt2);
+  }
+
+  if (redir->ssid) {
+    bcatcstr(str, "&ssid=");
+    bassigncstr(bt, redir->ssid);
+    redir_urlencode(bt, bt2);
+    bconcat(str, bt2);
+  }
+
+  if (redir->nasmac) {
+    bcatcstr(str, "&called=");
+    bassigncstr(bt, redir->nasmac);
+    redir_urlencode(bt, bt2);
+    bconcat(str, bt2);
+  } 
+
+  if (redir->radiusnasid) {
+    bcatcstr(str, "&nasid=");
+    bassigncstr(bt, redir->radiusnasid);
+    redir_urlencode(bt, bt2);
+    bconcat(str, bt2);
+  }
+
+  if (conn->lang[0]) {
+    bcatcstr(str, "&lang=");
+    bassigncstr(bt, conn->lang);
+    redir_urlencode(bt, bt2);
+    bconcat(str, bt2);
+  }
+
+  if (redirurl) {
+    bcatcstr(str, "&redirurl=");
+    bassigncstr(bt, redirurl);
+    redir_urlencode(bt, bt2);
+    bconcat(str, bt2);
+  }
+
+  if (userurl) {
+    bcatcstr(str, "&userurl=");
+    bassigncstr(bt, userurl);
+    redir_urlencode(bt, bt2);
+    bconcat(str, bt2);
+  }
+
+  if (redir->secret && *redir->secret) { /* take the md5 of the url+uamsecret as a checksum */
+    MD5_CTX context;
+    unsigned char cksum[16];
+    char hex[32+1];
+    int i;
+
+    MD5Init(&context);
+    MD5Update(&context, (uint8_t*)str->data, str->slen);
+    MD5Update(&context, (uint8_t*)redir->secret, strlen(redir->secret));
+    MD5Final(cksum, &context);
+
+    hex[0]=0;
+    for (i=0; i<16; i++)
+      sprintf(hex+strlen(hex), "%.2X", cksum[i]);
+
+    bcatcstr(str, "&md=");
+    bcatcstr(str, hex);
+  }
+
+  bdestroy(bt);
+  bdestroy(bt2);
+  return 0;
+}
+
 /* Make an XML Reply */
 static int redir_xmlreply(struct redir_t *redir, 
 			  struct redir_conn_t *conn, int res, long int timeleft, char* hexchal, 
@@ -313,6 +457,16 @@ static int redir_xmlreply(struct redir_t *redir,
 	bassignformat(bt, "<LocationName>%s</LocationName>\r\n", redir->radiuslocationname);
 	bconcat(b, bt);
       }
+
+
+      bcatcstr(b, "<LoginURL>");
+
+      bstring_buildurl(bt, conn, redir, options.wisprlogin ? options.wisprlogin : redir->url, 
+		       "smartclient", 0, hexchal, NULL, NULL, NULL, NULL, 
+		       conn->hismac, &conn->hisip);
+      bconcat(b, bt);
+
+      bcatcstr(b, "</LoginURL>\r\n");
       
       bassignformat(bt, "<LoginURL>%s%cres=smartclient&amp;uamip=%s&amp;uamport=%d&amp;challenge=%s</LoginURL>\r\n",
 		    options.wisprlogin ? options.wisprlogin : redir->url, 
@@ -481,140 +635,9 @@ static int redir_buildurl(struct redir_conn_t *conn, bstring str,
       conn->s_params.url[0]) {
     redir_url = (char *)conn->s_params.url;
   }
-
-  bassignformat(str, "%s%cres=%s&uamip=%s&uamport=%d", 
-		redir_url, strchr(redir_url, '?') ? '&' : '?',
-		resp, inet_ntoa(redir->addr), redir->port);
-
-  if (hexchal) {
-    bassignformat(bt, "&challenge=%s", hexchal);
-    bconcat(str, bt);
-    bassigncstr(bt,"");
-  }
   
-  if (conn->type == REDIR_STATUS) {
-    int starttime = conn->s_state.start_time;
-    if (starttime) {
-      int sessiontime;
-      time_t timenow = time(0);
-
-      sessiontime = timenow - starttime;
-
-      bassignformat(bt, "&starttime=%ld", starttime);
-      bconcat(str, bt);
-      bassignformat(bt, "&sessiontime=%ld", sessiontime);
-      bconcat(str, bt);
-    }
-
-    if (conn->s_params.sessiontimeout) {
-      bassignformat(bt, "&sessiontimeout=%ld", conn->s_params.sessiontimeout);
-      bconcat(str, bt);
-    }
-
-    if (conn->s_params.sessionterminatetime) {
-      bassignformat(bt, "&stoptime=%ld", conn->s_params.sessionterminatetime);
-      bconcat(str, bt);
-    }
-  }
- 
-  if (uid) {
-    bcatcstr(str, "&uid=");
-    bassigncstr(bt, uid);
-    redir_urlencode(bt, bt2);
-    bconcat(str, bt2);
-  }
-
-  if (timeleft) {
-    bassignformat(bt, "&timeleft=%ld", timeleft);
-    bconcat(str, bt);
-  }
-  
-  if (hismac) {
-    bcatcstr(str, "&mac=");
-    bassignformat(bt, "%.2X-%.2X-%.2X-%.2X-%.2X-%.2X",
-		  hismac[0], hismac[1], 
-		  hismac[2], hismac[3],
-		  hismac[4], hismac[5]);
-    redir_urlencode(bt, bt2);
-    bconcat(str, bt2);
-  }
-
-  if (hisip) {
-    bassignformat(bt, "&ip=%s", inet_ntoa(*hisip));
-    bconcat(str, bt);
-  }
-
-  if (reply) {
-    bcatcstr(str, "&reply=");
-    bassigncstr(bt, reply);
-    redir_urlencode(bt, bt2);
-    bconcat(str, bt2);
-  }
-
-  if (redir->ssid) {
-    bcatcstr(str, "&ssid=");
-    bassigncstr(bt, redir->ssid);
-    redir_urlencode(bt, bt2);
-    bconcat(str, bt2);
-  }
-
-  if (redir->nasmac) {
-    bcatcstr(str, "&called=");
-    bassigncstr(bt, redir->nasmac);
-    redir_urlencode(bt, bt2);
-    bconcat(str, bt2);
-  } 
-
-  if (redir->radiusnasid) {
-    bcatcstr(str, "&nasid=");
-    bassigncstr(bt, redir->radiusnasid);
-    redir_urlencode(bt, bt2);
-    bconcat(str, bt2);
-  }
-
-  if (conn->lang[0]) {
-    bcatcstr(str, "&lang=");
-    bassigncstr(bt, conn->lang);
-    redir_urlencode(bt, bt2);
-    bconcat(str, bt2);
-  }
-
-  if (redirurl) {
-    bcatcstr(str, "&redirurl=");
-    bassigncstr(bt, redirurl);
-    redir_urlencode(bt, bt2);
-    bconcat(str, bt2);
-  }
-
-  if (userurl) {
-    bcatcstr(str, "&userurl=");
-    bassigncstr(bt, userurl);
-    redir_urlencode(bt, bt2);
-    bconcat(str, bt2);
-  }
-
-  if (redir->secret && *redir->secret) { /* take the md5 of the url+uamsecret as a checksum */
-    MD5_CTX context;
-    unsigned char cksum[16];
-    char hex[32+1];
-    int i;
-
-    MD5Init(&context);
-    MD5Update(&context, (uint8_t*)str->data, str->slen);
-    MD5Update(&context, (uint8_t*)redir->secret, strlen(redir->secret));
-    MD5Final(cksum, &context);
-
-    hex[0]=0;
-    for (i=0; i<16; i++)
-      sprintf(hex+strlen(hex), "%.2X", cksum[i]);
-
-    bcatcstr(str, "&md=");
-    bcatcstr(str, hex);
-  }
-
-  bdestroy(bt);
-  bdestroy(bt2);
-  return 0;
+  return bstring_buildurl(str, conn, redir, redir_url, resp, timeleft, 
+			  hexchal, uid, userurl, reply, redirurl, hismac, hisip);
 }
 
 ssize_t
