@@ -23,8 +23,8 @@ struct session_params {
   uint8_t filteridbuf[256];
   uint8_t filteridlen;
   uint8_t routeidx;
-  uint32_t bandwidthmaxup;
-  uint32_t bandwidthmaxdown;
+  uint64_t bandwidthmaxup;
+  uint64_t bandwidthmaxdown;
   uint64_t maxinputoctets;
   uint64_t maxoutputoctets;
   uint64_t maxtotaloctets;
